# pvr.aminopvr

./: .gitignore  CMakeLists.txt  Makefile.am  README.md
addon/: addon.xml.in
addon/resources/: settings.xml
addon/resources/language/English/: strings.po
debian/: changelog.in  control  copyright  kodi-pvr-aminopvr.install  rules
project/VS2010Express/: pvr.aminopvr.vcxproj  pvr.aminopvr.vcxproj.filters
pvr.aminopvr/: addon.xml  addon.xml.in
pvr.aminopvr/resources/language/resource.language.en_gb/: strings.po
src/: AminoPVRData.cpp  AminoPVRData.h  HttpClient.cpp  HttpClient.h  categories.cpp  client.cpp  client.h
